// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AboutModal Component should attempt to display username, status data: username and status 1`] = `
<AboutModal
  aria-label="Quipucords"
  backgroundImageSrc="aboutBg.png"
  brandImageAlt="Quipucords"
  brandImageSrc="title.svg"
  isOpen={true}
  onClose={[Function]}
  trademark="t([
  "about.copyright",
  {
    "year": "2024"
  }
])"
>
  <Content
    className=""
  >
    <Content
      component="dl"
    >
      <React.Fragment>
        <Content
          component="dt"
        >
          t([
  "about.username"
])
        </Content>
        <Content
          component="dd"
        >
          lorem ipsum
        </Content>
      </React.Fragment>
      <React.Fragment>
        <Content
          component="dt"
        >
          t([
  "about.ui-version"
])
        </Content>
        <Content
          component="dd"
        >
          0.0.0.0000000
        </Content>
      </React.Fragment>
      <React.Fragment>
        <Content
          className=""
          component="dt"
        >
          t([
  "about.server-version"
])
        </Content>
        <Content
          className=""
          component="dd"
        >
          0.0.0.12345678
        </Content>
      </React.Fragment>
      <React.Fragment>
        <Content
          className=""
          component="dt"
        >
          t([
  "about.server-cpu-arch"
])
        </Content>
        <Content
          className=""
          component="dd"
        >
          i386
        </Content>
      </React.Fragment>
    </Content>
  </Content>
</AboutModal>
`;

exports[`AboutModal Component should log on error: api error 1`] = `
<AboutModal
  aria-label="Quipucords"
  backgroundImageSrc="aboutBg.png"
  brandImageAlt="Quipucords"
  brandImageSrc="title.svg"
  isOpen={true}
  onClose={[Function]}
  trademark="t([
  "about.copyright",
  {
    "year": "2024"
  }
])"
>
  <Content
    className="fadein"
  >
    <Content
      component="dl"
    >
      <React.Fragment>
        <Content
          component="dt"
        >
          t([
  "about.username"
])
        </Content>
        <Content
          component="dd"
        >
          lorem ipsum
        </Content>
      </React.Fragment>
      <React.Fragment>
        <Content
          component="dt"
        >
          t([
  "about.ui-version"
])
        </Content>
        <Content
          component="dd"
        >
          0.0.0.0000000
        </Content>
      </React.Fragment>
    </Content>
  </Content>
</AboutModal>
`;

exports[`AboutModal Component should render a basic component: basic 1`] = `
<AboutModal
  aria-label="Quipucords"
  backgroundImageSrc="aboutBg.png"
  brandImageAlt="Quipucords"
  brandImageSrc="title.svg"
  isOpen={false}
  onClose={[Function]}
  trademark="t([
  "about.copyright",
  {
    "year": "2024"
  }
])"
>
  <Content
    className="fadein"
  >
    <Content
      component="dl"
    >
      <React.Fragment>
        <Content
          component="dt"
        >
          t([
  "about.ui-version"
])
        </Content>
        <Content
          component="dd"
        >
          0.0.0.0000000
        </Content>
      </React.Fragment>
    </Content>
  </Content>
</AboutModal>
`;
